# rust-lambda-exmaple

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  docker-compose.yml
localstack/init_scripts/: 01_create_ddb_table.sh  create_table.json
src/: main.rs
