[package]
name = "rust-lambda-example"
version = "0.1.0"
authors = ["Sasaki Kazuhiro"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime="^0.3.0"
serde = "1.0.124"
tokio = { version = "^1.3.0"}
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
config = "0.11.0"
